Update Theme Animation

--- a/assets/scss/components/stencil/facetedSearch/_facetedSearch.scss
+++ b/assets/scss/components/stencil/facetedSearch/_facetedSearch.scss
@@ -132,20 +132,20 @@
             transform: translateY(-50%);
             transition: opacity .3s ease, transform .3s ease, visibility .3s;
             
-            &.icon-minus {
+            &.icon-plus {
                 visibility: hidden;
                 opacity: 0;
             }
         }
 
-        &.is-open {
-            .icon-plus {
+        &.is-show {
+            .icon-minus {
                 visibility: hidden;
                 opacity: 0;
                 transform: translateY(-50%) rotate(90deg);
             }
 
-            .icon-minus {
+            .icon-plus {
                 visibility: visible;
                 opacity: 1;
             }
@@ -154,10 +154,6 @@
 }
 .accordion-block {
     .accordion-content {
-        overflow: hidden;
-        will-change: height;
-        transition: height .3s ease;
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
+        display: block;
     }
 }
