--- a/assets/scss/custom/_blocks.scss
+++ b/assets/scss/custom/_blocks.scss
@@ -878,6 +878,10 @@
                 margin: 0;
                 margin-bottom: 8px;
             }
+
+            .hover-link-2 {
+                padding: 0;
+            }
         }
     }
 
