--- a/templates/components/custom/home/home-full-banner.html
+++ b/templates/components/custom/home/home-full-banner.html
@@ -1,7 +1,7 @@
-<section class="homeFullBanner">
+<section class="homeFullBanner" data-section-load="check-aos">
     <div class="homeFullBanner__item">
         <div class="image-overlay" style="--overlay-opacity: 0.45;"></div>
-        <div class="homeFullBanner__image">
+        <div class="homeFullBanner__image skeleton-loader">
             <a href="{{theme_settings.home_fullwidth_banner_link}}" class="homeFullBanner__link image-loader">
                 <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_fullwidth_banner_image}}" alt="{{theme_settings.home_banner_carousel_1_title}}">
             </a>
