--- a/templates/components/custom/home/home-product-block.html
+++ b/templates/components/custom/home/home-product-block.html
@@ -1,4 +1,4 @@
-<section id="list-product-detail-block" class="home-product-block">
+<section id="list-product-detail-block" class="home-product-block" data-section-load="check-aos">
     <div class="pl-0 pr-0">
         <div id="list-product-detail" class="product-block" data-columns="4" data-limit="8" data-dots="false">
             <div class="productsByListId custom-block-product" data-list-id="{{theme_settings.home_product_banner_listid}}" id="product-by-list-id">
@@ -11,7 +11,7 @@
                 </div>
                 <div class="productCarousel productCarouselCustom">
                    <div class="customBlockBanner productCarousel-slide">
-                    <div class="customBlockBanner__image">
+                    <div class="customBlockBanner__image skeleton-loader">
                         <a href="{{theme_settings.home_product_banner_link}}" class="customBlockBanner__link">
                             <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_product_banner_image}}" alt="{{theme_settings.home_product_banner_text}}">
                             
