--- a/templates/components/custom/home/home-section-banner-column.html
+++ b/templates/components/custom/home/home-section-banner-column.html
@@ -1,10 +1,10 @@
-<section class="sectionBannerCol">
+<section class="sectionBannerCol" data-section-load="check-aos">
     <div class="sectionBannerCol__list">
         <div class="sectionBannerCol__item">
             <div class="image-overlay" style="--overlay-opacity: 0.45;"></div>
-            <div class="sectionBannerCol__image">
+            <div class="sectionBannerCol__image skeleton-loader">
                 <a href="{{theme_settings.home_banner_2col_item1_link}}" class="sectionBannerCol__link">
-                    <img class="lazyload" src="{{cdn 'img/loading.svg'}}" data-src="/product_images/uploaded_images/{{theme_settings.home_banner_2col_item1_image}}" alt="Piercer">
+                    <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_banner_2col_item1_image}}" alt="Piercer">
                 </a>
             </div>
 
@@ -29,9 +29,9 @@
 
         <div class="sectionBannerCol__item">
             <div class="image-overlay" style="--overlay-opacity: 0.45;"></div>
-            <div class="sectionBannerCol__image">
+            <div class="sectionBannerCol__image skeleton-loader">
                 <a href="{{theme_settings.home_banner_2col_item2_link}}" class="sectionBannerCol__link">
-                    <img class="lazyload" src="{{cdn 'img/loading.svg'}}" data-src="/product_images/uploaded_images/{{theme_settings.home_banner_2col_item2_image}}" alt="Piercer">
+                    <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_banner_2col_item2_image}}" alt="Piercer">
                 </a>
             </div>
 
