--- a/templates/components/custom/home/home-section-testimonial.html
+++ b/templates/components/custom/home/home-section-testimonial.html
@@ -1,4 +1,4 @@
-<section class="homeTestimonial bg-global">
+<section class="homeTestimonial bg-global" data-section-load="check-aos">
     <h2 class="homeTestimonial__heading heading-size-7 text-center m-0" data-aos="hero" data-aos-order="1">Tish Testimonals</h2>
 
     <div class="container">
