--- a/templates/components/custom/home/section-home-account.html
+++ b/templates/components/custom/home/section-home-account.html
@@ -1,4 +1,4 @@
-<section class="homeAccount bg-global">
+<section class="homeAccount bg-global" data-section-load="check-aos">
     <div class="wrapper">
         <div class="homeAccount__cotent">
             <p class="homeAccount__subheading body-size-3 mt-0 mb-16 mb-10-mobile" data-aos="hero"" data-aos-order="1">
