--- a/templates/components/custom/home/section-home-gallery.html
+++ b/templates/components/custom/home/section-home-gallery.html
@@ -1,4 +1,4 @@
-<section class="homeHoverBanner">
+<section class="homeHoverBanner" data-section-load="check-aos">
     <div class="frame">
         <div class="frame-item">
             <div class="homeHoverBanner__content">
@@ -25,19 +25,19 @@
         <div class="frame-item">
             <div class="homeHoverBanner__gallery">
                 <div class="homeHoverBanner__imageList">
-                    <div class="homeHoverBanner__imageItem is-visible" data-section-load="active-title" data-section-name="{{theme_settings.home_gallery_1_title}}">
+                    <div class="homeHoverBanner__imageItem skeleton-loader is-visible" data-section-load="active-title" data-section-name="{{theme_settings.home_gallery_1_title}}">
                         <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_gallery_1_img}}" alt="{{theme_settings.home_gallery_1_title}}">
                     </div>
-                    <div class="homeHoverBanner__imageItem" data-section-load="active-title" data-section-name="{{theme_settings.home_gallery_2_title}}">
+                    <div class="homeHoverBanner__imageItem skeleton-loader" data-section-load="active-title" data-section-name="{{theme_settings.home_gallery_2_title}}">
                         <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_gallery_2_img}}" alt="{{theme_settings.home_gallery_2_title}}">
                     </div>
-                    <div class="homeHoverBanner__imageItem" data-section-load="active-title" data-section-name="{{theme_settings.home_gallery_3_title}}">
+                    <div class="homeHoverBanner__imageItem skeleton-loader" data-section-load="active-title" data-section-name="{{theme_settings.home_gallery_3_title}}">
                         <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_gallery_3_img}}" alt="{{theme_settings.home_gallery_3_title}}">
                     </div>
-                    <div class="homeHoverBanner__imageItem" data-section-load="active-title" data-section-name="{{theme_settings.home_gallery_4_title}}">
+                    <div class="homeHoverBanner__imageItem skeleton-loader" data-section-load="active-title" data-section-name="{{theme_settings.home_gallery_4_title}}">
                         <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_gallery_4_img}}" alt="{{theme_settings.home_gallery_4_title}}">
                     </div>
-                    <div class="homeHoverBanner__imageItem" data-section-load="active-title" data-section-name="{{theme_settings.home_gallery_5_title}}">
+                    <div class="homeHoverBanner__imageItem skeleton-loader" data-section-load="active-title" data-section-name="{{theme_settings.home_gallery_5_title}}">
                         <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_gallery_5_img}}" alt="{{theme_settings.home_gallery_5_title}}">
                     </div>
                     <div class="image-overlay" style="--bg: #212121; --overlay-opacity: 0.3;"></div>
