--- a/templates/components/custom/home/section-home-service.html
+++ b/templates/components/custom/home/section-home-service.html
@@ -1,4 +1,4 @@
-<section class="bg-global serviceBlock">
+<section class="bg-global serviceBlock" data-section-load="check-aos">
     <div class="container">
         <div class="serviceBlock__list custom-mobile-slider">
             <div class="item" data-aos="hero" data-aos-order="1">
