--- a/templates/components/custom/home/section-shop-the-look.html
+++ b/templates/components/custom/home/section-shop-the-look.html
@@ -1,9 +1,9 @@
-<section class="shopLook">
+<section class="shopLook" data-section-load="check-aos">
     <div class="shopLook__wrapper">
         <div class="shopLook__image">
             <div class="shopLook__image-container">
-                <div class="shopLook__image-bg">
-                    <img class="lazyload" src="{{cdn 'img/loading.svg'}}" data-src="/product_images/uploaded_images/home-shop-the-look-banner.jpg" alt="Shop The Look Banner">
+                <div class="shopLook__image-bg skeleton-loader">
+                    <img class="lazyload" src="" data-src="/product_images/uploaded_images/home-shop-the-look-banner.jpg" alt="Shop The Look Banner">
                 </div>
 
                 <div class="look__dots hide-on-mobile">
