--- a/assets/scss/components/stencil/productCarousel/_productCarousel.scss
+++ b/assets/scss/components/stencil/productCarousel/_productCarousel.scss
@@ -19,6 +19,7 @@
 
 .productCarousel-slide { // 1
     @include grid-column(6);
+    padding: 0 16px;
 
     @include breakpoint("small") {
         width: grid-calc(4, $total-columns);
