--- a/assets/scss/custom/_common.scss
+++ b/assets/scss/custom/_common.scss
@@ -128,14 +128,14 @@
 // Skeleton Loader
 // -----------------------------------------------------------------------------
 .skeleton-loader {
-    background: #f2f2f2;
-    background: linear-gradient(120deg, #f2f2f2 25%, #e6e6e6 37%, #f2f2f2 63%);
+    background: #f4f2f0;
+    background: linear-gradient(98deg, #f4f2f0 16%, #ffffff 32%, #f4f2f0 48%);
     background-size: 200% 100%;
     animation: skeleton-loading 4s infinite linear;
 }
 
+
 // CSS for product skeleton
-// -----------------------------------------------------------------------------
 .productSkeleton {
     &__list {
         display: flex;
@@ -282,6 +282,15 @@
             transform: scale(1);
             transition: transform 1.5s cubic-bezier(.215,.61,.355,1);
             transition-delay: 200ms;
+        }
+
+        @for $i from 0 through 100 {
+            &[data-step-animate='#{$i}'] {
+                img {
+                    transition-delay: 0.15s + $i * 0.15;
+                    transition-duration: 0.8s;
+                }
+            }
         }
     }
 }
@@ -481,4 +490,43 @@
 .hidden {
     display: none;
     visibility: hidden;
+}
+
+.custom-loader {
+    position: relative;
+    height: 4px;
+    display: block;
+    background-color: rgba(203, 160, 82, 0.05);
+    border-radius: 2px;
+    overflow: hidden;
+    width: 150px;
+
+    .loader-progress {
+        background-color: $color-custom-yellow;
+
+        &::before {
+            content: "";
+            position: absolute;
+            background-color: inherit;
+            top: 0;
+            left: -35%;
+            width: 100%;
+            bottom: 0;
+            will-change: transform;
+            animation: indeterminate 2.1s cubic-bezier(.65,.815,.735,.395) infinite;
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            background-color: inherit;
+            top: 0;
+            left: -200%;
+            width: 100%;
+            bottom: 0;
+            will-change: transform;
+            animation: indeterminate-short 2.1s cubic-bezier(.165,.84,.44,1) infinite;
+            animation-delay: 1.15s;
+        }
+    }
 }
