--- a/templates/components/custom/home/home-columns-banner.html
+++ b/templates/components/custom/home/home-columns-banner.html
@@ -3,7 +3,7 @@
         <div class="homeColBanner__list custom-mobile-slider">
             <div class="item" data-aos="hero" data-aos-order="1">
                 <div class="homeColBanner__item">
-                    <div class="homeColBanner__image">
+                    <div class="homeColBanner__image skeleton-loader">
                         <a href="{{theme_settings.home_col_banner_1_link}}" class="homeColBanner__link">
                             <img class="lazyload" data-src="/product_images/uploaded_images/{{theme_settings.home_col_banner_1_img}}" alt="{{theme_settings.home_col_banner_1_title}}">
                         </a>
@@ -32,7 +32,7 @@
         </div>
         <div class="item" data-aos="hero" data-aos-order="2">
             <div class="homeColBanner__item">
-                <div class="homeColBanner__image">
+                <div class="homeColBanner__image skeleton-loader">
                     <a href="{{theme_settings.home_col_banner_2_link}}" class="homeColBanner__link">
                         <img class="lazyload" data-src="/product_images/uploaded_images/{{theme_settings.home_col_banner_2_img}}" alt="{{theme_settings.home_col_banner_2_title}}">
                     </a>
@@ -61,7 +61,7 @@
 
         <div class="item" data-aos="hero" data-aos-order="3">
             <div class="homeColBanner__item">
-                <div class="homeColBanner__image">
+                <div class="homeColBanner__image skeleton-loader">
                     <a href="{{theme_settings.home_col_banner_3_link}}" class="homeColBanner__link">
                         <img class="lazyload" data-src="/product_images/uploaded_images/{{theme_settings.home_col_banner_3_img}}" alt="{{theme_settings.home_col_banner_3_title}}">
                     </a>
