--- a/templates/components/products/card.html
+++ b/templates/components/products/card.html
@@ -26,6 +26,7 @@
     {{else}}
         {{lang 'common.login_for_pricing'}}
     {{/or}}"
+    data-section-load="animation"
 >
     <figure class="card-figure">
         {{#if stock_level '===' 0}}
@@ -65,7 +66,7 @@
            aria-label="{{> components/products/product-info}}"
            data-event-type="product-click"
         >
-            <div class="card-img-container" data-aos="img-in" data-aos-delay="0" data-aos-duration="800" data-aos-easing="ease-out-quart">
+            <div class="card-img-container image-loader skeleton-loader">
                 {{> components/common/responsive-img
                     image=image
                     class="card-image"
