Start Add Menu Mobile Effect

--- a/assets/scss/components/stencil/navPages/_navPages.scss
+++ b/assets/scss/components/stencil/navPages/_navPages.scss
@@ -216,6 +216,11 @@
             margin-left: 15px;
             margin-right: 15px;
             display: block;
+
+            @include smax-m {
+                margin-left: 0;
+                margin-right: 0;
+            }; 
         }
     }
 
