--- a/assets/scss/components/foundation/buttons/_buttons.scss
+++ b/assets/scss/components/foundation/buttons/_buttons.scss
@@ -174,6 +174,9 @@
 }
 
 .button--icon {
+    margin-top: 15px;
+    margin-bottom: 14px;
+    
     svg {
         fill: stencilColor("button--icon-svg-color");
     }
