--- a/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
+++ b/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
@@ -285,6 +285,7 @@
 
     @include smax-s {
         padding: 16px 16px 7px;
+        max-width: 100%;
     }; 
 }
 
@@ -303,7 +304,7 @@
         font-size: $fontSize-hero;
         margin-bottom: 15px;
         line-height: 62px;
-        margin: 0 0 10px 0;
+        margin: 0 0 13px 0;
     }
 }
 
