--- a/templates/components/custom/home/home-columns-banner.html
+++ b/templates/components/custom/home/home-columns-banner.html
@@ -5,7 +5,7 @@
                 <div class="homeColBanner__item">
                     <div class="homeColBanner__image skeleton-loader">
                         <a href="{{theme_settings.home_col_banner_1_link}}" class="homeColBanner__link">
-                            <img class="lazyload" data-src="/product_images/uploaded_images/{{theme_settings.home_col_banner_1_img}}" alt="{{theme_settings.home_col_banner_1_title}}">
+                            <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_col_banner_1_img}}" alt="{{theme_settings.home_col_banner_1_title}}">
                         </a>
                     </div>
 
@@ -34,7 +34,7 @@
             <div class="homeColBanner__item">
                 <div class="homeColBanner__image skeleton-loader">
                     <a href="{{theme_settings.home_col_banner_2_link}}" class="homeColBanner__link">
-                        <img class="lazyload" data-src="/product_images/uploaded_images/{{theme_settings.home_col_banner_2_img}}" alt="{{theme_settings.home_col_banner_2_title}}">
+                        <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_col_banner_2_img}}" alt="{{theme_settings.home_col_banner_2_title}}">
                     </a>
                 </div>
 
@@ -63,7 +63,7 @@
             <div class="homeColBanner__item">
                 <div class="homeColBanner__image skeleton-loader">
                     <a href="{{theme_settings.home_col_banner_3_link}}" class="homeColBanner__link">
-                        <img class="lazyload" data-src="/product_images/uploaded_images/{{theme_settings.home_col_banner_3_img}}" alt="{{theme_settings.home_col_banner_3_title}}">
+                        <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_col_banner_3_img}}" alt="{{theme_settings.home_col_banner_3_title}}">
                     </a>
                 </div>
 
