--- a/assets/scss/components/citadel/cards/_cards.scss
+++ b/assets/scss/components/citadel/cards/_cards.scss
@@ -48,7 +48,7 @@
 
 .card-img-container {
     @include lazy-loaded-padding("productgallery_size");
-    max-width: get-width(stencilString("productgallery_size"));
+    // max-width: get-width(stencilString("productgallery_size"));
 
     &.card-img-container-under {
         @include pos($pos: abs, $t: -1px, $r: -1px, $b: -1px, $l: -1px);
