--- a/assets/scss/custom/_blocks.scss
+++ b/assets/scss/custom/_blocks.scss
@@ -233,6 +233,14 @@
             @include image-padding-bottom(2543, 988);
             min-height: 988px;
         }
+
+        img {
+            @include smax-s {
+                width: 100%;
+                height: 320px;
+                object-fit: cover;
+            }; 
+        }
     }
 }
 
@@ -274,6 +282,15 @@
     .customBlockBanner {
         position: relative;
         width: calc((100vw - var(--scrollbar-width) - var(--outer) * 2) * .28);
+        margin-left: 50px;
+
+        @include smax-m {
+            margin-left: 32px;
+        }; 
+
+        @include smax-s {
+            margin-left: 16px;
+        }; 
 
         &__link {
             @include image-padding-bottom(540, 540);
