--- a/templates/pages/category.html
+++ b/templates/pages/category.html
@@ -15,6 +15,8 @@ category:
 
 {{#partial "page"}}
 
+{{{region name="category_banner_top"}}}
+
 {{#if theme_settings.show_category_breadcrumbs}}
     {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 {{/if}}
