--- a/assets/scss/components/foundation/dropdown/_dropdown.scss
+++ b/assets/scss/components/foundation/dropdown/_dropdown.scss
@@ -133,6 +133,7 @@
         background-color: stencilColor("dropdown--wishList-backgroundColor");
         border-top-left-radius: 0;
         border-top-right-radius: 0;
+        border-radius: 0;
         width: 100%;
     }
 
