--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -84,5 +84,7 @@
 /* AOS */
 @import "../../node_modules/aos/dist/aos";
 
+@import "fonts/montserrat-cardo";
+
 /* CSS for custom theme */
 @import "custom/custom-theme";
