--- a/templates/components/common/requireness-msg.html
+++ b/templates/components/common/requireness-msg.html
@@ -1,7 +1,5 @@
 <small>
     {{#if required}}
-    ({{lang 'common.required'}})
-    {{else}}
-    {{lang 'common.optional'}}
+    {{lang 'common.required'}}
     {{/if}}
 </small>
