--- a/templates/components/custom/global/custom-global.html
+++ b/templates/components/custom/global/custom-global.html
@@ -5,3 +5,10 @@
     <!-- Mega Menu -->
     {{> components/custom/header/custom-megamenu }}
 </div>
+
+<div class="tooltip-default" style="--tooltip-top: 448.28125px;">
+    <div class="tooltip-default__arrow" style="left: 1202px;"></div>
+    <div class="tooltip-default__inner" style="transform: translateX(1170px);">
+        <div class="tooltip-default__text">Yellow</div>
+    </div>
+</div>
