--- a/assets/scss/components/foundation/tabs/_tabs.scss
+++ b/assets/scss/components/foundation/tabs/_tabs.scss
@@ -8,46 +8,61 @@
 //
 // -----------------------------------------------------------------------------
 
-.tab {
-    border-top: $tab-active-border;
-    float: none;
+.tabs {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+    margin: 0;
+    padding: 5px 0;
+    list-style: none;
+    position: relative;
+    border-bottom: none;
+}
 
-    @include breakpoint("medium") {
-        border-top-color: $tab-title-border-color;
-        float: left;
-    }
+.tab {
+    padding: 10px 0 0;
+    color: #646464;
 
     &.is-active {
-        border-left-color: $tab-title-border-color;
-        border-right-color: $tab-title-border-color;
+        color: #000000;
 
-        @include breakpoint("small") {
-            margin-bottom: $tab-title-border-bottom-offset;
+        .tab-title span {
+            background-size: 100% 1px;
         }
+    }
 
-        @include breakpoint("medium") {
-            border: $tab-active-border;
-            border-bottom: $tab-title-border;
-        }
+    & + .tab {
+        margin-left: 48px;
     }
 }
 
 .tab-title {
-    padding: spacing("half") + spacing("quarter") 0;
-    text-align: center;
-    text-decoration: $tab-title-text-decoration;
+    padding: 0;
+    font-size: 13px;
+    letter-spacing: 1.3px;
+    text-transform: uppercase;
+    color: inherit !important;
+    font-weight: 400 !important;
+    text-decoration: none;
 
-    @include breakpoint("small") {
-        text-align: left;
+    > span {
+        padding: 0 0 5px;
+        background: linear-gradient(to right, currentColor, currentColor);
+        background-size: 0% 1px;
+        background-position: 50% 86%;
+        background-repeat: no-repeat;
+        transition: color .25s ease-in, background-size .25s ease-in;
     }
 
-    @include breakpoint("medium") {
-        padding: spacing("half") spacing("single");
+    &:hover {
+        span {
+            background-size: 100% 1px;
+        }
     }
+}
 
-    @include breakpoint("large") {
-        padding: remCalc(11px) remCalc(18px);
-    }
+.tabs-contents {
+    margin-bottom: 20px;
 }
 
 .tab-content {
@@ -58,6 +73,25 @@
     // are incorrect as the elements inside the tab-content have no dimensions to grab.
     // Carousel is a prime example. It needs widths to calculate the layout and slides
     // -----------------------------------------------------------------------------
+
+    padding: 15px 15px 15px 0;
+    font-size: $fontSize-root;
+    color: $color-custom-black;
+    line-height: 19px;
+    font-weight: 300;
+
+    .productView-info {
+        > .productViewInfo__list {
+            margin-top: 0;
+        }
+
+        ul {
+            margin-left: 32px;
+            margin-bottom: 16px;
+        }
+    }
+
+
     &.has-jsContent {
         display: block;
         height: 0;
