--- a/assets/scss/custom/_common.scss
+++ b/assets/scss/custom/_common.scss
@@ -541,3 +541,73 @@
         }
     }
 }
+
+.tooltip-default {
+    position: absolute;
+    z-index: 10;
+    top: var(--tooltip-top, 0);
+    left: 0;
+    right: 0;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity .2s ease-out;
+    overflow: hidden;
+    padding-bottom: 20px;
+
+    &__arrow {
+        position: absolute;
+        top: 8px;
+        left: 0;
+        z-index: 1;
+        margin-top: 3px;
+        transition: top .2s ease-out;
+
+        &::before {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 12px;
+            height: 12px;
+            margin-left: -6px;
+            background: #ffffff;
+            border: 1px solid rgb(244, 242, 240);
+            -webkit-clip-path: polygon(0% 0%, 100% 100%, 0 100%);
+            clip-path: polygon(0% 0%, 100% 100%, 0 100%);
+            transform: rotate(135deg);
+            content: "";
+        }
+    }
+
+    &__inner {
+        position: relative;
+        display: inline-block;
+        max-width: 100%;
+    }
+
+    &__text {
+        position: relative;
+        top: 8px;
+        margin-top: 10px;
+        background: #ffffff;
+        color: #000000;
+        padding: 3px 10px;
+        border-radius: 0;
+        box-shadow: 0 0 0 1px rgb(244, 242, 240);
+        font-size: 14px;
+        text-align: center;
+        transition: top .2s ease-out;
+    }
+
+    &.is-visible {
+        transition: none;
+        animation: tooltip-opacity .2s ease-out;
+        animation-fill-mode: forwards;
+
+        .tooltip-default__arrow,
+        .tooltip-default__text {
+            transition: none;
+            animation: tooltip-top .2s ease-out;
+            animation-fill-mode: forwards;
+        }
+    }
+}
