--- a/templates/components/common/wishlist-dropdown.html
+++ b/templates/components/common/wishlist-dropdown.html
@@ -1,22 +1,17 @@
-<form action="{{product.add_to_wishlist_url}}" class="form form-wishlist form-action" data-wishlist-add method="post">
+<form action="{{product.add_to_wishlist_url}}" class="form form-wishlist form-action mb-0" data-wishlist-add method="post">
     <a aria-controls="wishlist-dropdown"
        aria-expanded="false"
-       class="button dropdown-menu-button"
+       class="button button--primary dropdown-menu-button mb-0"
        data-dropdown="wishlist-dropdown"
        href="#"
     >
         <span>{{lang 'account.wishlists.add_item'}}</span>
-        <i aria-hidden="true" class="icon">
-            <svg>
-                <use href="#icon-chevron-down" />
-            </svg>
-        </i>
     </a>
     <ul aria-hidden="true" class="dropdown-menu" data-dropdown-content id="wishlist-dropdown">
         {{#if customer.wishlists}}
             {{#each customer.wishlists}}
                 <li>
-                    <input class="button {{#if this.num_items '!==' '0'}}button--has-items{{/if}}"
+                    <input class="button button--primary {{#if this.num_items '!==' '0'}}button--has-items{{/if}}"
                            formaction="{{this.add_url}}&product_id={{../product.id}}"
                            type="submit"
                            value="{{this.name}}"
@@ -25,11 +20,11 @@
             {{/each}}
         {{else}}
         <li>
-            <input class="button" type="submit" value="{{lang 'account.wishlists.add_to_default'}}">
+            <input class="button button--primary" type="submit" value="{{lang 'account.wishlists.add_to_default'}}">
         </li>
         {{/if}}
         <li>
-            <a data-wishlist class="button" href="/wishlist.php?action=addwishlist&product_id={{product.id}}">{{lang 'account.wishlists.create_new'}}</a>
+            <a data-wishlist class="button button--primary" href="/wishlist.php?action=addwishlist&product_id={{product.id}}">{{lang 'account.wishlists.create_new'}}</a>
         </li>
     </ul>
 </form>
