--- a/templates/components/products/description-tabs.html
+++ b/templates/components/products/description-tabs.html
@@ -1,12 +1,9 @@
 <ul class="tabs" data-tab>
     {{#if product.description}}
         <li class="tab is-active">
-            <a class="tab-title" href="#tab-description">{{lang 'products.description'}}</a>
-        </li>
-    {{/if}}
-    {{#if product.warranty}}
-        <li class="tab {{#unless product.description}}is-active{{/unless}}">
-            <a class="tab-title" href="#tab-warranty">{{lang 'products.warranty'}}</a>
+            <a class="tab-title" href="#tab-description">
+                <span>{{lang 'products.description'}}</span>
+            </a>
         </li>
     {{/if}}
     {{#all product.custom_fields theme_settings.show_custom_fields_tabs}}
@@ -14,7 +11,7 @@
             <a class="tab-title"
                href="#tab-{{dashcase (lowercase (sanitize theme_settings.pdp-custom-fields-tab-label))}}"
             >
-                {{sanitize theme_settings.pdp-custom-fields-tab-label}}
+                <span>{{{lang 'products.tab_details_title'}}}</span>
             </a>
         </li>
     {{/all}}
@@ -30,16 +27,11 @@
             {{{product.description}}}
         </div>
     {{/if}}
-    {{#if product.warranty}}
-        <div class="tab-content {{#unless product.description}}is-active{{/unless}}" id="tab-warranty">
-            {{{product.warranty}}}
-        </div>
-    {{/if}}
     {{#all product.custom_fields theme_settings.show_custom_fields_tabs}}
       <div class="tab-content" id="tab-{{dashcase (lowercase (sanitize theme_settings.pdp-custom-fields-tab-label))}}">
-         <dl class="productView-info">
-            {{> components/products/custom-fields }}
-         </dl>
+         <div class="productView-info">
+            {{> components/products/custom-fields productSKU=product.sku}}
+         </div>
       </div>
     {{/all}}
     {{#all settings.show_product_reviews theme_settings.show_product_reviews}}
