--- a/templates/components/products/tabs.html
+++ b/templates/components/products/tabs.html
@@ -1,4 +1,4 @@
-<ul class="tabs" data-tab role="tablist">
+<ul class="tabs flex flex-center" data-tab role="tablist">
     {{#if product.related_products}}
         <li class="tab is-active" role="presentation">
             <a class="tab-title" href="#tab-related" role="tab" tabindex="0" aria-selected="true" controls="tab-related">
@@ -6,8 +6,18 @@
             </a>
         </li>
     {{/if}}
-    {{#if product.similar_by_views}}
+
+    <!-- * Recently View Product Section -->
+    {{#if theme_settings.showRecentlyViewSection}}
         <li class="tab{{#unless product.related_products}} is-active{{/unless}}" role="presentation">
+            <a class="tab-title" href="#tab-related" role="tab" tabindex="0" aria-selected="true" controls="tab-related">
+                <span>{{lang 'products.recently_view_products'}}</span>
+            </a>
+        </li>
+    {{/if}}
+
+    {{#if product.similar_by_views}}
+        <li class="tab{{#and (if product.related_products) (if theme_settings.showRecentlyViewSection)}}{{else}} is-active{{/and}}" role="presentation">
             <a class="tab-title" href="#tab-similar" role="tab" tabindex="0" aria-selected="{{#if product.related_products}}false{{else}}true{{/if}}" controls="tab-similar">
                 <span>{{lang 'products.similar_by_views'}}</span>
             </a>
@@ -18,7 +28,13 @@
 <div class="tabs-contents">
 {{#if product.related_products}}
     <div role="tabpanel" aria-hidden="false" class="tab-content has-jsContent is-active" id="tab-related">
-        {{> components/products/carousel products=product.related_products columns=4 list="Related Products"}}
+        {{> components/custom/products/csm-recently-viewed-block }}
+    </div>
+{{/if}}
+
+{{#if theme_settings.showRecentlyViewSection}}
+    <div role="tabpanel" aria-hidden="{{#if product.related_products}}true{{else}}false{{/if}}" class="tab-content has-jsContent{{#unless product.related_products}} is-active{{/unless}}" id="tab-related">
+        
     </div>
 {{/if}}
 
